Country list added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
             margin-bottom: 20px;
             border-radius: 0px 25px 0px;
         }
+        .country_list{
+            background-color: rgb(65, 143, 109);
+            color: white;
+            padding: 10px;
+            margin: 10px;
+            border: 6px solid black;
+            border-radius:  0px 25px ;
+            box-shadow: 4px 4px 3px 4px gray;
+        }
+
+
     </style>
 
 </head>
@@ -41,6 +52,18 @@
             quidem voluptatum optio esse sed necessitatibus. Minima a eaque, nam, beatae asperiores quo aspernatur
             doloribus distinctio delectus voluptas suscipit consequuntur, labore error! Molestias voluptas iste non
             magnam repudiandae exercitationem tempora, facere minima.</p>
+    </div>
+
+    <div class="country_list">
+        <h2>Here are some country:</h2>
+        <ul>
+            <li>Bangladesh</li>
+            <li>Japan</li>
+            <li>China</li>
+            <li>Pakistan</li>
+            <li>Argentina</li>
+            <li>Saudi Arabia</li>
+        </ul>
     </div>
 
 </body>
