Also added about us

--- a/about.html
+++ b/about.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
+    <title>About Us</title>
 </head>
 <body>
+    <div>
+        <h1>About us:</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem facere perferendis ab illo quis repudiandae suscipit tempore corporis, at quasi minima ipsam nesciunt temporibus, cum vel consequatur distinctio labore. Aspernatur necessitatibus maiores itaque commodi dolores modi sed aut magnam consequatur suscipit nisi, nam consectetur reiciendis quibusdam, est culpa ex impedit quas eligendi rerum officia et. Ut omnis veniam optio tenetur ullam! Minima, ipsa ipsum. Reprehenderit numquam minima velit possimus labore et unde nam rem fuga voluptate deleniti exercitationem, perspiciatis hic nesciunt autem? Dolor perferendis dignissimos rem facere error aspernatur culpa rerum eum laudantium, laboriosam voluptatem tempore saepe maiores, necessitatibus asperiores? Porro architecto, laborum labore ea reiciendis in doloremque dolores cum error rem laboriosam blanditiis hic harum nam autem. Labore eveniet explicabo eius hic voluptas, earum veritatis officia. Sapiente nisi, quas quisquam consectetur esse temporibus impedit rem corporis animi blanditiis. Possimus quia dolorem repellendus quasi quisquam iste officiis voluptatum eos dolore similique, saepe ullam rerum in veniam aspernatur laudantium accusamus! Blanditiis exercitationem itaque nesciunt aut quod dolorum quae libero quos, maxime at voluptates aspernatur vero, delectus omnis voluptatum fuga ratione repellendus ex repudiandae doloribus suscipit tempora expedita facere praesentium! Blanditiis reiciendis neque suscipit eum ipsam maxime laborum voluptate quae illum cupiditate dolorum, dignissimos molestias voluptatibus cum quaerat ad earum architecto? Accusantium blanditiis eligendi aliquid laborum unde cum voluptate voluptatibus temporibus magni labore consequuntur hic sint impedit, quasi aspernatur reprehenderit reiciendis vero excepturi similique architecto corrupti? Ullam voluptate id earum, nulla placeat ea vel a vitae voluptas neque voluptatem laborum eos odit rerum fugiat ipsum consequatur? Debitis velit ut labore harum voluptatibus, officiis laborum voluptas ipsa nisi nulla nemo incidunt. Exercitationem nihil accusamus nam aliquam quo voluptas quae reiciendis commodi, quibusdam molestias soluta optio? Placeat, ipsam! Numquam earum doloribus deserunt sint facere, architecto ea ad, assumenda illum odio ut accusantium consequuntur eligendi.</p>
+    </div>
     
 </body>
 </html>
